--- a/Feature_Selection_using_Ridge.ipynb
+++ b/Feature_Selection_using_Ridge.ipynb
@@ -44,7 +44,7 @@
     "feature_name = list(X.columns)\n",
     "num_feats=30\n",
     "from sklearn.linear_model import Ridge\n",
-    "rr = Ridge(alpha=1) # higher the alpha value, more restriction on the coefficients; low alpha > more generalization, coefficients are barely\n",
+    "rr = Ridge(alpha=1) # higher value of the alpha applied more restriction on the coefficients, which will select more number features; low alpha > more generalization, coefficients are barely\n",
     "# restricted and in this case linear and ridge regression resembles\n",
     "embeded_rr_selector = SelectFromModel(rr, max_features=num_feats)\n",
     "embeded_rr_selector.fit(X, y)\n",
