--- a/Feature_Selection_using_RandomForestClassifier.ipynb
+++ b/Feature_Selection_using_RandomForestClassifier.ipynb
@@ -307,10 +307,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Unnamed: 0',\n",
+       " 'Crossing',\n",
+       " 'Finishing',\n",
+       " 'ShortPassing',\n",
+       " 'Dribbling',\n",
+       " 'LongPassing',\n",
+       " 'BallControl',\n",
+       " 'Acceleration',\n",
+       " 'SprintSpeed',\n",
+       " 'Agility',\n",
+       " 'Stamina',\n",
+       " 'Volleys',\n",
+       " 'FKAccuracy',\n",
+       " 'Reactions',\n",
+       " 'Balance',\n",
+       " 'ShotPower',\n",
+       " 'Strength',\n",
+       " 'LongShots',\n",
+       " 'Aggression',\n",
+       " 'Interceptions',\n",
+       " 'Body Type_Courtois']"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rf_feature"
+   ]
   },
   {
    "cell_type": "code",
